--- a/_articles/2020-02-03-animals.md
+++ b/_articles/2020-02-03-animals.md
@@ -1,11 +1,12 @@
 ---
-layout: blog
+layout: default
 category: blog
 published: true
 title: animals
+author: Alice McGrath
 ---
 
-Read [the play](/playtext.md)
+Read [the play](/playtext)
 
 ## My menagerie
 
