--- a/_articles/2020-02-03-animals.md
+++ b/_articles/2020-02-03-animals.md
@@ -6,7 +6,7 @@ title: animals
 author: Alice McGrath
 ---
 
-Read [the play](/playtext)
+Read [the play](https://digbmc.github.io/emperor-moon/playtext/)
 
 ## My menagerie
 
